[package]
name = "service"
version = "0.0.8"
authors = ["Julio Monteiro <julio.monteiro@holo.host>"]
edition = "2018"

[dependencies]
serde = { version = "=1.0.89", features = ["rc"] }
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
serde_derive = "=1.0.89"
syn = "=0.15.31"
# nix-shell installs a symbolic link to the correct defined installation of holochain-rust
hdk = { path = "../../../holochain-rust/crates/hdk" }
holochain_wasm_utils = { path = "../../../holochain-rust/crates/wasm_utils" }
holochain_persistence_api = "=0.0.11"
holochain_json_derive = "=0.0.17"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
