[package]
name = "service"
version = "0.1.0"
authors = ["Julio Monteiro <julio.monteiro@holo.host>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
ed25519-dalek = { version = "1.0.0-pre.2", features = ["nightly", "serde"] }
failure = "0.1.5"
hcid = "0.0.6"
hdk = { path = "../../../holochain-rust/crates/hdk" }
hdk_proc_macros = { path = "../../../holochain-rust/crates/hdk_v2" }
holochain_json_derive = "=0.0.17"
holochain_persistence_api = "=0.0.11"
holochain_wasm_utils = { path = "../../../holochain-rust/crates/wasm_utils" }
lazy_static = "1.2"
serde = { version = "=1.0.89", features = ["rc"] }
serde_derive = "=1.0.89"
serde_json = { version = "=1.0.39", features = ["preserve_order"] }
syn = "=0.15.31"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
